--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ body {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   border: none;
   background: var(--mid-night);
 }
@@ -93,7 +93,7 @@ body {
   border-radius: 18px;
   max-height: 700px;
   min-height: 700px;
-  min-width: 400px;
+  min-width: 300px;
 }
 
 .form-container {
@@ -119,7 +119,8 @@ body {
 }
 
 .todo-form button {
-  width: 45px;
+  /* width: 40px; */
+  height: 45px;
   font-size: 16px;
   background: none;
   border: 1px solid var(--royal-blue);
@@ -127,6 +128,9 @@ body {
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   background: var(--royal-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
